--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     :root {
       --bg-color: #ffffff;
-      --text-color: #000000;
+      --text-color: #1fe229;
       --header-bg: #f0f0f0;
       --sidebar-bg: #e0e0e0;
     }
